Fix overflow on follow button for mobile

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -59,3 +59,11 @@ body {
 .user-info {
   min-width: 800px;
 }
+
+.container {
+  background-color: #ff2b98;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
